# RipeWire

./: Cargo.toml  LICENSE  README.md
c_obj_gen/: c_obj_gen.c  meson.build
c_obj_gen/src/: json_out.c  json_out.h  main.c  meson.build  rust_out.c  rust_out.h
dump/: 1.txt
libspa-consts/: Cargo.toml  build.rs  wrapper.h
libspa-consts/src/: lib.rs
obj_gen/: Cargo.toml
obj_gen/src/: json.rs  main.rs  typed.rs  untyped.rs
pod/: Cargo.toml
pod-derive/: Cargo.toml
pod-derive/src/: lib.rs
pod-simple/: Cargo.toml
pod-simple/src/: dbg_print.rs  deserialize.rs  lib.rs  main.rs  serialize.rs
pod-v2/: Cargo.toml
pod-v2/src/: deserialize.rs  lib.rs  main.rs  serialize.rs
pod-v2/src/obj_gen/: gen.rs  mod.rs  obj_gen.c  typed.rs  untyped.rs
pod/src/: array.rs  deserialize.rs  dictionary.rs  lib.rs  main.rs  params.rs  permissions.rs  pod.rs  pod_struct.rs  props.rs  serialize.rs  utils.rs
pod/src/obj_gen/: mod.rs  untyped.rs
pod/src/pod/: deserialize.rs  serialize.rs
protocol/: pw_client.xml  pw_client_node.xml  pw_core.xml  pw_device.xml  pw_factory.xml  pw_link.xml  pw_module.xml  pw_node.xml  pw_port.xml  pw_registry.xml
reference/: dictionary_structure.md  pw_client.md  pw_core.md  pw_device.md  pw_factory.md  pw_link.md  pw_module.md  pw_node.md  pw_port.md  pw_registry.md
ripewire/: Cargo.toml
ripewire/examples/: calloop.rs  mute.rs  proxy.rs  repro.rs  tokio.rs
ripewire/src/: connection.rs  context.rs  global_list.rs  lib.rs  proxy.rs
ripewire/src/protocol/: mod.rs  pw_client.rs  pw_client_node.rs  pw_core.rs  pw_device.rs  pw_factory.rs  pw_link.rs  pw_module.rs  pw_node.rs  pw_port.rs  pw_registry.rs
scanner/: Cargo.toml
scanner/src/: main.rs
src/: connection.rs  context.rs  global_list.rs  lib.rs  main.rs  memory_registry.rs  object_map.rs  proxy.rs
src/protocol/: generated.rs  mod.rs  pw_client.rs  pw_client_node.rs  pw_core.rs  pw_device.rs  pw_factory.rs  pw_link.rs  pw_module.rs  pw_node.rs  pw_port.rs  pw_registry.rs  raw.rs
src/protocol/raw/: pw_client.rs  pw_client_node.rs  pw_core.rs  pw_device.rs  pw_module.rs  pw_port.rs  pw_registry.rs
