[package]
name = "ripewire"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["pod", "pod-v2", "pod-derive", "libspa-consts", "scanner", "obj_gen"]

[dependencies]
calloop = "0.10.5"
nix = "0.26"
bitflags = "2.0.0"

num-traits = "0.2"
num-derive = "0.4"
thiserror = "1"
libspa-consts = { path = "./libspa-consts" }
pod = { path = "./pod" }
pod-v2 = { path = "./pod-v2" }
pod-derive = { path = "./pod-derive" }
quick-xml = "0.28.0"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
  "sync",
] }

serde = { version = "1", features = ["derive"] }
ron = "0.8.0"
