[package]
name = "obj_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.5.0"
prettyplease = "0.2.25"
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
syn = "2.0.90"

libspa-consts = { version = "0", path = "../libspa-consts" }
proc-macro2 = "1.0.92"
