[package]
name = "pod-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
libc = "0.2"
errno = "0.3"
cookie-factory = "0.3.2"
nom = "7"

bstr = "1"

libspa-consts = { version = "0", path = "../libspa-consts" }
pod-derive = { path = "../pod-derive/" }
pod = { path = "../pod/" }
