[package]
name = "ripewire"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
bitflags = "2.0.0"
rustix = { version = "1.0.7", features = ["net", "process", "system"] }

num-traits = "0.2"
num-derive = "0.4"
thiserror = "2"
libspa-consts = { path = "../libspa-consts" }
pod = { path = "../pod" }
pod-derive = { path = "../pod-derive" }

[dev-dependencies]
calloop = "0.14.2"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
  "sync",
] }
ron = "0.10"
